Added basic form to popup.  Need to connect form to change.

--- a/popup.html
+++ b/popup.html
@@ -31,6 +31,14 @@
   </head>
   <body>
     <div id="status"></div>
+    <div id="word-input">
+      <form>
+        <ol>
+          <li>Replace <input type="text" name="1"></input> with <input type="text" name="1"></input>.</li>
+        </ol>
+        <input type="submit">
+      </form>
+    </div>
     <img id="image-result" hidden>
   </body>
 </html>
