Beginning to work on saving to Chrome storage.  Welcome to Blake (@blakegilmore).

--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,7 @@
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
     <script src="popup.js"></script>
+    <!-- Retrieve and display stored user preferences -->
   </head>
   <body>
     <div id="status"></div>
@@ -37,6 +38,7 @@
           <li>Replace <input type="text" name="1"></input> with <input type="text" name="1"></input>.</li>
         </ol>
         <input type="submit">
+        <!-- Edit stored user preferences -->
       </form>
     </div>
     <img id="image-result" hidden>
