Further efforts to save to storage hindered by console logging trickiness.  Will resume pair programming remotely later.

--- a/popup.html
+++ b/popup.html
@@ -33,9 +33,9 @@
   <body>
     <div id="status"></div>
     <div id="word-input">
-      <form>
+      <form  onsubmit="submitted()">
         <ol>
-          <li>Replace <input type="text" name="1"></input> with <input type="text" name="1"></input>.</li>
+          <li>Replace <input type="text" name="find"></input> with <input type="text" name="replace"></input>.</li>
         </ol>
         <input type="submit">
         <!-- Edit stored user preferences -->
